syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/iot/bulbasaur/protos";

import "alice/megamind/protos/common/frame.proto";

message SpecifyRequestState {
    reserved 1;
    reserved "SemanticFrame";
    repeated TSemanticFrame SemanticFrames = 2;
}

message YandexIODiscoveryState {
    string ActiveTuyaToken = 1;
    string SessionID = 2;
}
